# django-starter

./: .gitignore  README.md  pyproject.toml
mysite/mysite/: settings.py  urls.py
mysite/users/: auth_backends.py  tests.py
mysite/users/migrations/: 0001_initial.py
