[tool.poetry]
name = "virtual-balance-backend"
version = "0.1.0"
description = ""
authors = ["Andrea Bertoloni <bertoloni.a@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"  # (>=3.8.0 <3.9.0) bc djangorestframework-simplejwt required Python >=3.6,<3.9
Django = "^3.0.7"
djangorestframework = "^3.11.0"
django-cors-headers = "^3.3.0"
djangorestframework-simplejwt = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
